Jump/branch restored+memories adjustment
The jump/branch instructions have been repaired, because since the pipelining process, it wasn't working properly.

Also, the memories have been separated between data and instruction memories because the loading instructions from outside is not friendly with simulations.

--- a/Core_noIP/sim/modelsim.ini
+++ b/Core_noIP/sim/modelsim.ini
@@ -797,10 +797,10 @@ Resolution = ns
 UserTimeUnit = default
 
 ; Default run length
-RunLength = 100
+RunLength = 100 ns
 
 ; Maximum iterations that can be run without advancing simulation time
-IterationLimit = 10000000
+IterationLimit = 100000
 
 ; Specify libraries to be searched for precompiled modules
 ; LibrarySearchPath = <path/lib> [<path/lib> ...]
