CSR and multi-cycle FP operations
The CSR has been reworked, as previously the operations being performed weren't the correct ones.

A bug has been solved where a series of load operations could trigger a false stall IF and ID stages, which results on Regfile address and data desynchronized by a clock cycle. The solution is to use correctly the "i_rsX_o" variables from the control unit, which were previously dismissed because not understanding what were doing (previous engineer did not comment those, now I did).

These changes have been implemented on the RV32I, RV32IM and RV32IMF core models. Although only RV32IMF have been tested.

Exclusive to RV32IMF, the FADD and FSUB operation now is done in 3 clock cycles. This is done to increase the core frequency clock. Future update will take data about this implementation, outdating previous RV32IMF synthesis data.

--- a/RV32IMF/sim/modelsim.ini
+++ b/RV32IMF/sim/modelsim.ini
@@ -80,7 +80,7 @@ VOPTDEBUG = +acc -debugdb
 ; Value of 3 or 2008 for VHDL-2008
 ; Value of 4 or ams99 for VHDL-AMS-1999
 ; Value of 5 or ams07 for VHDL-AMS-2007
-VHDL93 = 2002
+VHDL93 = 2008
 
 ; Ignore VHDL-2008 declaration of REAL_VECTOR in package STANDARD. Default is off.
 ; ignoreStandardRealVector = 1
@@ -352,6 +352,27 @@ Explicit = 1
 ; Default is 1 (enabled)  
 ; CreateLib = 1
 
+NoDebug = 0
+CheckSynthesis = 0
+NoVitalCheck = 0
+Optimize_1164 = 1
+NoVital = 0
+Quiet = 0
+Show_source = 0
+DisableOpt = 0
+ZeroIn = 0
+CoverageNoSub = 0
+NoCoverage = 1
+CoverCells = 0
+CoverExcludeDefault = 0
+CoverFEC = 1
+CoverShortCircuit = 1
+CoverOpt = 3
+Show_Warning1 = 1
+Show_Warning2 = 1
+Show_Warning3 = 1
+Show_Warning4 = 1
+Show_Warning5 = 1
 [vlog]
 ; Turn off inclusion of debugging info within design units.
 ; Default is to include debugging info.
@@ -644,6 +665,23 @@ LibrarySearchPath = mtiAvm mtiRnm mtiOvm mtiUvm mtiUPF infact
 ; Default is 1 (enabled)  
 ; CreateLib = 1
 
+vlog95compat = 0
+Vlog01Compat = 0
+Svlog = 1
+CoverCells = 0
+CoverExcludeDefault = 0
+CoverFEC = 1
+CoverShortCircuit = 1
+CoverOpt = 3
+OptionFile = E:/Uni/TFM/VerilogCode/RV32IMF/sim/vlog.opt
+Quiet = 0
+Show_source = 0
+Protect = 0
+NoDebug = 0
+Hazard = 0
+UpCase = 0
+DisableOpt = 0
+ZeroIn = 0
 [sccom]
 ; Enable use of SCV include files and library.  Default is off.
 ; UseScv = 1
